Created Homepage Logout and Create Account

--- a/UnivMedicalRecord/Pages/CreateUser/Index.cshtml
+++ b/UnivMedicalRecord/Pages/CreateUser/Index.cshtml
@@ -67,8 +67,11 @@
                                             <input type="radio" class="btn-check mb-5" value="admin" asp-for="UserType" id="option1" autocomplete="off" checked>
                                             <label class="btn btn-secondary" for="option1">Admin</label>
                                                                         
-                                            <input type="radio" class="btn-check mb-5" value="employee" asp-for="UserType" id="option2" autocomplete="off" disabled>
-                                            <label class="btn btn-secondary" for="option2">Employee</label>
+                                            <input type="radio" class="btn-check mb-5" value="student" asp-for="UserType" id="option2" autocomplete="off" disabled>
+                                            <label class="btn btn-secondary" for="option2">Student</label>
+                                            
+                                            <input type="radio" class="btn-check mb-5" value="faculty" asp-for="UserType" id="option3" autocomplete="off" disabled>
+                                            <label class="btn btn-secondary" for="option2">Faculty</label>
                                             </div>
                                         }
                                         else
@@ -77,8 +80,11 @@
                                             <input type="radio" class="btn-check mb-5" value="admin" asp-for="UserType" id="option1" autocomplete="off" disabled>
                                             <label class="btn btn-secondary" for="option1">Admin</label>
                                                                         
-                                            <input type="radio" class="btn-check mb-5" value="employee" asp-for="UserType" id="option2" autocomplete="off" checked>
-                                            <label class="btn btn-secondary" for="option2">Employee</label>
+                                            <input type="radio" class="btn-check mb-5" value="student" asp-for="UserType" id="option2" autocomplete="off">
+                                            <label class="btn btn-secondary" for="option2">Student</label>
+                                                                                        
+                                            <input type="radio" class="btn-check mb-5" value="faculty" asp-for="UserType" id="option3" autocomplete="off">
+                                            <label class="btn btn-secondary" for="option3">Faculty</label>
                                             </div>
                                         }
                                     
