--- a/UnivMedicalRecord/Pages/Login/Index.cshtml
+++ b/UnivMedicalRecord/Pages/Login/Index.cshtml
@@ -34,7 +34,7 @@
                                     </div>
                                     <div class="form-group">
                                         <label asp-for="Password" class="control-label"></label>
-                                        <input asp-for="Password" type="password" placeholder="Enter Username" class="form-control"/>
+                                        <input asp-for="Password" type="password" placeholder="Password" class="form-control"/>
                                         <span asp-validation-for="Password" class="text-danger"></span>
                                     </div>
 
