--- a/UnivMedicalRecord/Pages/Login/Index.cshtml
+++ b/UnivMedicalRecord/Pages/Login/Index.cshtml
@@ -19,7 +19,7 @@
                 <div class="card" style="border-radius: 1rem;">
                     <div class="row g-0">
                         <div class="col-mb-5 col-lg-5 d-none d-md-block">
-                            <img src="https://img.freepik.com/premium-vector/bright-red-blue-tech-corporate-background_88343-3589.jpg?w=996" class="img-fluid" style="border-radius: 1rem 0 0 1rem;"/>
+                            <img/>
                         </div>
 
                         <div class="col-md-4 col-lg-6 d-flex align-items-center">
