--- a/UnivMedicalRecord/Pages/Shared/_Layout.cshtml
+++ b/UnivMedicalRecord/Pages/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
 <header>
 </header>
 <div class="container">
-    <main role="main" class="pb-3">
+    <main role="main">
         @RenderBody()
     </main>
 </div>
