[WIP]Added create medical record function

--- a/UnivMedicalRecord/Pages/Homepage/Index.cshtml
+++ b/UnivMedicalRecord/Pages/Homepage/Index.cshtml
@@ -31,14 +31,15 @@
                   </li>
                   <li>
                     <a href="#" class="nav-link text-white">
-                      <svg class="bi me-2" width="16" height="16"><use xlink:href="#speedometer2"></use></svg>
+                      <svg class="bi me-2" width="16" height="16"><use xlink:href="#"></use></svg>
                       Dashboard
                     </a>
                   </li>
                   <li>
                     <a href="#" class="nav-link text-white">
-                      <svg class="bi me-2" width="16" height="16"><use xlink:href="#table"></use></svg>
-                      Orders
+                      <form class="form-inline" method="post">
+                        <button type="submit" class="dropdown-item" width="16" height="16" asp-page-handler="MedicalRecord">Medical Record</button>
+                      </form>
                     </a>
                   </li>
                   <li>
