--- a/UnivMedicalRecord/wwwroot/css/site.css
+++ b/UnivMedicalRecord/wwwroot/css/site.css
@@ -7,7 +7,7 @@ html {
   html {
     font-size: 16px;
   }
-}
+} 
 
 .btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
   box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #ffffff;
@@ -16,9 +16,13 @@ html {
 html {
   position: relative;
   min-height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-  margin-bottom: 10px;
+  margin: 0;
+  padding: 0;
 }
+
 
