--- a/UnivMedicalRecord/Pages/Login/Index.cshtml
+++ b/UnivMedicalRecord/Pages/Login/Index.cshtml
@@ -12,7 +12,7 @@
     <title></title>
 </head>
 <body>
-<section class="vh-100" style="background-color: #0072A0;">
+<section class="vh-100" style="background-color: #ffffff;">
     <div class="container py-5 h-100">
         <div class="row d-flex justify-content-center align-items-center h-100">
             <div class="col col-xl-10">
