--- a/UnivMedicalRecord/Pages/Homepage/GeneralRecords.cshtml
+++ b/UnivMedicalRecord/Pages/Homepage/GeneralRecords.cshtml
@@ -20,7 +20,7 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0">
     <title>
-        Build a Survey Form using HTML and CSS
+        Create General Records
     </title>
  
     <style>
@@ -36,9 +36,9 @@
         /* Styling the Form (Color, Padding, Shadow) */
         form {
             background-color: #fff;
-            max-width: 500px;
+            max-width: 600px;
             margin: 50px auto;
-            padding: 30px 20px;
+            padding: 30px 30px;
             box-shadow: 2px 5px 10px rgba(0, 0, 0, 0.5);
         }
  
@@ -46,6 +46,13 @@
         .form-control {
             text-align: left;
             margin-bottom: 25px;
+            display: inline-block;
+        }
+        
+        .form-check {
+            text-align: left;
+            display: inline-block;
+            margin-right: 25px;
         }
  
         /* Styling form-control Label */
@@ -60,10 +67,9 @@
         .form-control input[type=text],
       	.form-control select,
       	.form-control textarea{
-        width: 95%;
+        width: 100%;
         padding: 5px 8px;
         margin: 5px 0;
-        //box-sizing: border-box;
         border: none;
         border-bottom: 2px solid black;
         }
@@ -76,27 +82,24 @@
         width: 35%;
         padding: 5px 8px;
         margin: 5px 0;
-        //box-sizing: border-box;
         border: none;
         border-bottom: 2px solid black;
         }
       
         .form-control input[id=age],
       	.form-control textarea{
-        width: 45%;
+        width: 55%;
         padding: 5px 8px;
         margin: 5px 0;
-        //box-sizing: border-box;
         border: none;
         border-bottom: 2px solid black;
         }
       
         .form-control input[id=email],
       	.form-control textarea{
-        width: 95%;
+        width: 100%;
         padding: 5px 10px;
         margin: 10px 0;
-        box-sizing: border-box;
         border: none;
         border-bottom: 2px solid black;
         }
@@ -107,7 +110,10 @@
         .form-control input[type="radio"],
         .form-control input[type="checkbox"] {
             display: inline-block;
-            width: auto;
+            width: 15px;
+            height: 15px;
+            background-color: #000;
+              
         }
  
         /* Styling Button */
@@ -129,10 +135,11 @@
     <h2>Personal Information of @Model.Name</h2>
     
     <!-- Create Form -->
-    <form id="form" method="post">
+    <form class="form-inline" id="form" method="post">
             
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-        <!-- Details -->
+    <!-- Details -->
+    
         <div class="form-control">
             <label asp-for="FullName" class="control-label"></label>
             <input asp-for="FullName" class="form-control"/>
@@ -377,8 +384,6 @@
     <button type="submit" value="submit">
         Submit
     </button>
-    
-    <button type="submit" class="btn btn-outline-dark" asp-page-handler="Test">Test</button>
     </form>
 </body>
 </html>
