--- a/UnivMedicalRecord/Pages/Homepage/EditRecord.cshtml
+++ b/UnivMedicalRecord/Pages/Homepage/EditRecord.cshtml
@@ -313,50 +313,50 @@
        &nbsp;
       
         <div class="form-control">
-            <label asp-for="FamilyInfo.GurdianName" class="control-label"></label>
-            <input asp-for="FamilyInfo.GurdianName" class="form-control"/>
-            <span asp-validation-for="FamilyInfo.GurdianName" class="text-danger"></span>
+            <label asp-for="FamilyInfo.GuardianName" class="control-label"></label>
+            <input asp-for="FamilyInfo.GuardianName" class="form-control"/>
+            <span asp-validation-for="FamilyInfo.GuardianName" class="text-danger"></span>
         </div>
 
         <div class="form-control">
             <div class="form-check">
-                <input type="radio" class="form-check-input" value="Married" asp-for="FamilyInfo.GurdianStatus" id="Gurdian1" autocomplete="off" checked>
-                <label class="form-check-label" for="Gurdian1">Married</label>
+                <input type="radio" class="form-check-input" value="Married" asp-for="FamilyInfo.GuardianStatus" id="Guardian1" autocomplete="off" checked>
+                <label class="form-check-label" for="Guardian1">Married</label>
             </div>
                             
             <div class="form-check">
-                <input type="radio" class="form-check-input" value="Single" asp-for="FamilyInfo.GurdianStatus" id="Gurdian2" autocomplete="off">
-                <label class="form-check-label" for="Gurdian2">Single</label>
+                <input type="radio" class="form-check-input" value="Single" asp-for="FamilyInfo.GuardianStatus" id="Guardian2" autocomplete="off">
+                <label class="form-check-label" for="Guardian2">Single</label>
             </div>
                             
             <div class="form-check">
-                <input type="radio" class="form-check-input" value="Separated" asp-for="FamilyInfo.GurdianStatus" id="Gurdian3" autocomplete="off">
-                <label class="form-check-label" for="Gurdian3">Separated</label>
+                <input type="radio" class="form-check-input" value="Separated" asp-for="FamilyInfo.GuardianStatus" id="Guardian3" autocomplete="off">
+                <label class="form-check-label" for="Guardian3">Separated</label>
             </div>
                             
             <div class="form-check">
-                <input type="radio" class="form-check-input" value="Widowed" asp-for="FamilyInfo.GurdianStatus" id="Gurdian4" autocomplete="off">
-                <label class="form-check-label" for="Gurdian4">Widowed</label>
+                <input type="radio" class="form-check-input" value="Widowed" asp-for="FamilyInfo.GuardianStatus" id="Guardian4" autocomplete="off">
+                <label class="form-check-label" for="Guardian4">Widowed</label>
             </div>
         </div>
     
       
         <div class="form-control">
-            <label asp-for="FamilyInfo.GurdianAddress" class="control-label"></label>
-            <input asp-for="FamilyInfo.GurdianAddress" class="form-control"/>
-            <span asp-validation-for="FamilyInfo.GurdianAddress" class="text-danger"></span>
+            <label asp-for="FamilyInfo.GuardianAddress" class="control-label"></label>
+            <input asp-for="FamilyInfo.GuardianAddress" class="form-control"/>
+            <span asp-validation-for="FamilyInfo.GuardianAddress" class="text-danger"></span>
         </div>
       
         <div class="form-control">
-            <label asp-for="FamilyInfo.GurdianOccupation" class="control-label"></label>
-            <input asp-for="FamilyInfo.GurdianOccupation" class="form-control"/>
-            <span asp-validation-for="FamilyInfo.GurdianOccupation" class="text-danger"></span>
+            <label asp-for="FamilyInfo.GuardianOccupation" class="control-label"></label>
+            <input asp-for="FamilyInfo.GuardianOccupation" class="form-control"/>
+            <span asp-validation-for="FamilyInfo.GuardianOccupation" class="text-danger"></span>
         </div>
 
     <div class="form-control">
-            <label asp-for="FamilyInfo.GurdianRelation" class="control-label"></label>
-            <input asp-for="FamilyInfo.GurdianRelation" class="form-control"/>
-            <span asp-validation-for="FamilyInfo.GurdianRelation" class="text-danger"></span>
+            <label asp-for="FamilyInfo.GuardianRelation" class="control-label"></label>
+            <input asp-for="FamilyInfo.GuardianRelation" class="form-control"/>
+            <span asp-validation-for="FamilyInfo.GuardianRelation" class="text-danger"></span>
         </div>
         
         <h2>Medical Information</h2>
