--- a/UnivMedicalRecord/Pages/Homepage/GeneralRecords.cshtml
+++ b/UnivMedicalRecord/Pages/Homepage/GeneralRecords.cshtml
@@ -312,56 +312,56 @@
        &nbsp;
       
         <div class="form-control">
-            <label asp-for="GurdianName" class="control-label"></label>
-            <input asp-for="GurdianName" class="form-control"/>
-            <span asp-validation-for="GurdianName" class="text-danger"></span>
+            <label asp-for="GuardianName" class="control-label"></label>
+            <input asp-for="GuardianName" class="form-control"/>
+            <span asp-validation-for="GuardianName" class="text-danger"></span>
         </div>
 
         <div class="form-control">
             <div class="form-check">
-                <input type="radio" class="form-check-input" value="Married" asp-for="GurdianStatus" id="Gurdian1" autocomplete="off" checked>
-                <label class="form-check-label" for="Gurdian1">Married</label>
+                <input type="radio" class="form-check-input" value="Married" asp-for="GuardianStatus" id="Guardian1" autocomplete="off" checked>
+                <label class="form-check-label" for="Guardian1">Married</label>
             </div>
                             
             <div class="form-check">
-                <input type="radio" class="form-check-input" value="Single" asp-for="GurdianStatus" id="Gurdian2" autocomplete="off">
-                <label class="form-check-label" for="Gurdian2">Single</label>
+                <input type="radio" class="form-check-input" value="Single" asp-for="GuardianStatus" id="Guardian2" autocomplete="off">
+                <label class="form-check-label" for="Guardian2">Single</label>
             </div>
                             
             <div class="form-check">
-                <input type="radio" class="form-check-input" value="Separated" asp-for="GurdianStatus" id="Gurdian3" autocomplete="off">
-                <label class="form-check-label" for="Gurdian3">Separated</label>
+                <input type="radio" class="form-check-input" value="Separated" asp-for="GuardianStatus" id="Guardian3" autocomplete="off">
+                <label class="form-check-label" for="Guardian3">Separated</label>
             </div>
                             
             <div class="form-check">
-                <input type="radio" class="form-check-input" value="Widowed" asp-for="GurdianStatus" id="Gurdian4" autocomplete="off">
-                <label class="form-check-label" for="Gurdian4">Widowed</label>
+                <input type="radio" class="form-check-input" value="Widowed" asp-for="GuardianStatus" id="Guardian4" autocomplete="off">
+                <label class="form-check-label" for="Guardian4">Widowed</label>
             </div>
         </div>
     
       
         <div class="form-control">
-            <label asp-for="GurdianAddress" class="control-label"></label>
-            <input asp-for="GurdianAddress" class="form-control"/>
-            <span asp-validation-for="GurdianAddress" class="text-danger"></span>
+            <label asp-for="GuardianAddress" class="control-label"></label>
+            <input asp-for="GuardianAddress" class="form-control"/>
+            <span asp-validation-for="GuardianAddress" class="text-danger"></span>
         </div>
       
         <div class="form-control">
-            <label asp-for="GurdianOccupation" class="control-label"></label>
-            <input asp-for="GurdianOccupation" class="form-control"/>
-            <span asp-validation-for="GurdianOccupation" class="text-danger"></span>
+            <label asp-for="GuardianOccupation" class="control-label"></label>
+            <input asp-for="GuardianOccupation" class="form-control"/>
+            <span asp-validation-for="GuardianOccupation" class="text-danger"></span>
         </div>
       
         <div class="form-control">
-           <label asp-for="GurdianNumber" class="control-label"></label>
-            <input asp-for="GurdianNumber" class="form-control"/>
-            <span asp-validation-for="GurdianNumber" class="text-danger"></span>
+           <label asp-for="GuardianNumber" class="control-label"></label>
+            <input asp-for="GuardianNumber" class="form-control"/>
+            <span asp-validation-for="GuardianNumber" class="text-danger"></span>
         </div>
  
         <div class="form-control">
-            <label asp-for="GurdianRelation" class="control-label"></label>
-            <input asp-for="GurdianRelation" class="form-control"/>
-            <span asp-validation-for="GurdianRelation" class="text-danger"></span>
+            <label asp-for="GuardianRelation" class="control-label"></label>
+            <input asp-for="GuardianRelation" class="form-control"/>
+            <span asp-validation-for="GuardianRelation" class="text-danger"></span>
         </div>
         
         <h2>Medical Information</h2>
