--- a/UnivMedicalRecord/Pages/Homepage/ViewMedical.cshtml
+++ b/UnivMedicalRecord/Pages/Homepage/ViewMedical.cshtml
@@ -379,7 +379,7 @@
  
         	<!-- Input Type Text -->
 	        <label>
-		        @Model.GurdianName
+		        @Model.GuardianName
 	        </label>
 	        
     	</div>
@@ -391,7 +391,7 @@
         	 
         	<!-- Dropdown options -->
 	        <label>
-		        @Model.GurdianStatus
+		        @Model.GuardianStatus
 	        </label>
 	        
     	</div>
@@ -403,7 +403,7 @@
  
         	<!-- Input Type Text -->
 	        <label>
-		        @Model.GurdianAddress
+		        @Model.GuardianAddress
 	        </label>
 	        
     	</div>
@@ -415,7 +415,7 @@
  
         	<!-- Input Type Text -->
 	        <label>
-		        @Model.GurdianOccupation
+		        @Model.GuardianOccupation
 	        </label>
 	        
     	</div>
