--- a/UnivMedicalRecord/Pages/Login/Index.cshtml
+++ b/UnivMedicalRecord/Pages/Login/Index.cshtml
@@ -11,46 +11,31 @@
 <head>
     <title></title>
 </head>
-<body>
-<section class="vh-100" style="background-color: #ffffff;">
-    <div class="container py-5 h-100">
-        <div class="row d-flex justify-content-center align-items-center h-100">
-            <div class="col col-xl-10">
-                <div class="card" style="border-radius: 1rem;">
-                    <div class="row g-0">
-                        <div class="col-mb-5 col-lg-5 d-none d-md-block">
-                            <img/>
-                        </div>
-
-                        <div class="col-md-4 col-lg-6 d-flex align-items-center">
-                            <div class="card-body p-4 p-lg-4 text-black">
-
-                                <h2 class="mb-2">Login</h2>
-                                <form method="post">
-                                    <div class="form-group">
-                                        <label asp-for="Username" class="control-label"></label>
-                                        <input asp-for="Username" placeholder="Enter Username" class="form-control"/>
-                                        <span asp-validation-for="Username" class="text-danger"></span>
-                                    </div>
-                                    <div class="form-group">
-                                        <label asp-for="Password" class="control-label"></label>
-                                        <input asp-for="Password" type="password" placeholder="Password" class="form-control"/>
-                                        <span asp-validation-for="Password" class="text-danger"></span>
-                                    </div>
-
-                                    &nbsp;
-                                    <div class="form-group">
-                                        <input type="submit" value="Login" class="btn btn-primary"/>
-                                    </div>
-                                </form>
-                            </div>
-                        </div>
+<body style="background: #ffffff">
+<div>
+    <div class="row d-flex justify-content-md-center align-items-center vh-100">
+        <div class=" card col-md-5 m-lg-5">
+            <h2 class="card-header">Login</h2>
+            <div class="card-body">
+                <form method="post">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <div class="form-group mt-2">
+                        <label asp-for="Username" class="control-label"></label>
+                        <input asp-for="Username" class="form-control mt-1"/>
+                        <span asp-validation-for="Username" class="text-danger mt-1"></span>
                     </div>
-                </div>
+                    <div class="form-group mt-2">
+                        <label asp-for="Password" class="control-label"></label>
+                        <input asp-for="Password" class="form-control mt-1" type="password"/>
+                        <span asp-validation-for="Password" class="text-danger mt-1"></span>
+                    </div>
+                    <div class="form-group mt-4 mb-2">
+                        <input type="submit" value="Login" class="btn btn-dark" style="width: 100%;"/>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
-
-</section>
+</div>
 </body>
 </html>
