Creation of lab test

--- a/UnivMedicalRecord/Pages/Homepage/Index.cshtml
+++ b/UnivMedicalRecord/Pages/Homepage/Index.cshtml
@@ -52,23 +52,21 @@
                 </a>
               </li>
             }
-            
-            
           }
           
           @{
-              if (Model.Type == "Regular")
-              {
-                <li>
-                  <a href="#" class="nav-link text-white">
-                    <form class="form-inline" method="post">
-                      <button type="submit" class="dropdown-item" width="16" height="16" asp-page-handler="LabResult">Laboratory Test</button>
-                      </form>
-                    </a>
-                  </li>
-              }
+            if (Model.Type == "Regular")
+            {
+              <li>
+                <a href="#" class="nav-link text-white">
+                  <form class="form-inline" method="post">
+                    <button type="submit" class="dropdown-item" width="16" height="16" asp-page-handler="LabResult">Laboratory Test</button>
+                  </form>
+                </a>
+              </li>
             }
-            <li>
+          }
+          <li>
             <a href="#" class="nav-link text-white">
               <form class="form-inline" method="post">
                 <button type="submit" class="dropdown-item" width="16" height="16" asp-page-handler="Inbox">Inbox</button>
@@ -103,10 +101,68 @@
         </div>
       </div> 
       <div class="col-md-8">
+        @{
+          if (Model.Type == "Admin")
+          {
+            <div>
+              <div class="row d-flex justify-content-md-center vh-100">
+                <div class="col-md-10">
+                  <div class="card m-lg-5 h-50">
+                    <h4 class="card-header">
+                      Student/Employee List
+                    </h4>
+                    <div class="card-body">
+                      <div class="row mt-2">
+                        <div class="col-md-15">
+                          <table class="table">
+                            <thead>
+                            <tr>
+                              <th>Name</th>
+                              <th scope="col"> </th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            @foreach (var x in Model.Users)
+                            {
+                              <tr>
+                                <td>@x.Firstname</td>
+                                <td><a class="btn btn-dark" style="float: right" asp-page="./AddLabTest" asp-route-id="@x.Id">Add Lab Record</a></td>
+                              </tr>
+                            }
+                            </tbody>
+                          </table>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          }
+          else
+          {
+            <div class="row">
+              @for (int i = 0; i < 3; i++)
+              {
+                <div class="col-md-4 mb-4 mt-4">
+                  <div class="card" style="width: 18rem;">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="btn btn-dark">Card link</a>
+                      <a href="#" class="btn btn-dark">Another link</a>
+                    </div>
+                  </div>
+                </div>
+                
+              }
+            </div>
+          }
+        }
         
-      </div>       
+      </div>
     </div>
-   
     </body>
 </html>
 
