--- a/UnivMedicalRecord/Pages/Homepage/GeneralRecords.cshtml
+++ b/UnivMedicalRecord/Pages/Homepage/GeneralRecords.cshtml
@@ -9,21 +9,10 @@
 
     @{
     ViewData["Title"] = "General Records";
-}
+    }
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible"
-          content="IE=edge">
-    <meta name="viewport"
-          content="width=device-width, initial-scale=1.0">
-    <title>
-        Create General Records
-    </title>
- 
-    <style>
+
+<style>
  
         /* Styling the Body element i.e. Color,
         Font, Alignment */
@@ -129,7 +118,20 @@
             margin-bottom: 20px;
         }
     </style>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible"
+          content="IE=edge">
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1.0">
+    <title>
+        Create General Records
+    </title>
 </head>
+
   
 <body>
     <h2>Personal Information of @Model.Name</h2>
@@ -140,17 +142,20 @@
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <!-- Details -->
     
-        <div class="form-control">
+   
+        <div class=form-control>
             <label asp-for="FullName" class="control-label"></label>
             <input asp-for="FullName" class="form-control"/>
             <span asp-validation-for="FullName" class="text-danger"></span>
         </div>
-      
+    
         <div class="form-control" >
             <label asp-for="Age" class="control-label"></label>
             <input asp-for="Age" class="form-control"/>
             <span asp-validation-for="Age" class="text-danger"></span>
         </div>
+    
+        
         
          <div class="form-control">
                 <div class="form-check">
