--- a/UnivMedicalRecord/Pages/Homepage/EditLab.cshtml
+++ b/UnivMedicalRecord/Pages/Homepage/EditLab.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model UnivMedicalRecord.Pages.Homepage.AddLabTest
+@model UnivMedicalRecord.Pages.Homepage.EditLab
 
 @{
     Layout = null;
@@ -61,6 +61,7 @@
   
       
 </style>
+
 <script>
 //for setting default date to today -- not working though
     var LabDate = new Date();
@@ -118,6 +119,7 @@
     }
 
 </script>
+@*
 <body>
 <form class="form-inline" id="form" method="post">
     <div class="ckBoxCollection" display>
@@ -466,6 +468,7 @@
                       	<th scope="col">ANALYTE</th>
                         <th scope="col" colspan="2">RESULT</th>
                         <th scope="col" colspan="2">NORMAL RANGE</th>
+      
                       </tr>
                       <tr>
                         <th scope="col"></th>
@@ -704,3 +707,4 @@
 
 </body>
 </html>
+*@
